--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.3",
+    "@formkit/themes": "^1.6.9",
+    "@formkit/vue": "^1.6.9",
     "axios": "^1.8.4",
     "pinia": "^3.0.1",
-    "tailwindcss": "^4.1.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -33,6 +33,7 @@
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.22.0",
     "eslint-plugin-oxlint": "^0.16.0",
     "eslint-plugin-vue": "~10.0.0",
@@ -40,7 +41,9 @@
     "jsdom": "^26.0.0",
     "npm-run-all2": "^7.0.2",
     "oxlint": "^0.16.0",
+    "postcss": "^8.5.3",
     "prettier": "3.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
