--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@formkit/themes": "^1.6.9",
     "@formkit/vue": "^1.6.9",
+    "@headlessui/vue": "^1.7.23",
     "axios": "^1.8.4",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
