--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "axios": "^1.8.4",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
