--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@headlessui/vue": "^1.7.23",
     "axios": "^1.8.4",
     "pinia": "^3.0.1",
+    "qs": "^6.14.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue-toastification": "^2.0.0-rc.5"
@@ -30,6 +31,7 @@
     "@tsconfig/node22": "^22.0.1",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.14",
+    "@types/qs": "^6.9.18",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitest/eslint-plugin": "^1.1.38",
     "@vue/eslint-config-prettier": "^10.2.0",
