--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@formkit/themes": "^1.6.9",
     "@formkit/vue": "^1.6.9",
     "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.2.0",
     "axios": "^1.8.4",
     "pinia": "^3.0.1",
     "qs": "^6.14.0",
